Added progress-circle element & related CSS

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       Weekly target: <span id="progressTotal">0</span> /
       <span id="target"></span> miles
     </h3>
-    <div class="progressCircleWrapper"></div>
+    <div class="progressCircleWrapper">
+      <div id="progressCircle">
+        <div id="progressCenter"></div>
+      </div>
+    </div>
   </section>
 
   <script src="assets/js/tracker.js"></script>
