Fixed label typo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span id="average">0</span>
     </div>
     <div>
-      <p>This weeks high:</p>
+      <p>This week&#39;s high:</p>
       <span id="high">0</span>
     </div>
   </section>
